
apply plugin: 'java'
apply plugin: 'idea'
apply plugin: 'eclipse'

group = 'ru.collections.trendbar'
version = '0.1'

// base on ideas from LMAX Collections CoalescingBuffer
description = 'Ring Buffer for Trendbar issue'

sourceCompatibility = 1.7
targetCompatibility = 1.7

repositories {
  mavenLocal()
  jcenter()
}

dependencies {

}

sourceSets {
  main.java.srcDirs 'src'
  test.java.srcDir 'perf-test'
}

sourceSets.main.output.classesDir = 'classes'
sourceSets.test.output.classesDir = 'test-classes'


test {
  testLogging.showStandardStreams = true
}

task benchmark(type: Test) {
  jvmArgs "-XX:MaxPermSize=256m"
  doLast() {
    def commandScript = "java -server -XX:+AggressiveOpts -XX:+UseCondCardMark -XX:CompileThreshold=100000 -cp test-classes/:classes/ ru.collections.trendbar.BenchmarkRunner"
    def process = ["/bin/bash", "-s"].execute()
    process.withWriter { it.write(commandScript) }
    process.consumeProcessOutput(System.out, System.err)
    def code = process.waitFor()
    println """benchmark exit code ${code}"""
  }
}

benchmark.dependsOn compileTestJava

build.dependsOn benchmark

task wrapper(type: Wrapper) {
    gradleVersion = '1.8'
}
